--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,8 +1,13 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+
+  --vt-c-green-contract: #a3bba3;
+  --vt-c-green-contrast-soft: #b1beb1b9;
+  --vt-c-green-contrast-mute: #819981b9;
+
+  --vt-c-white: #f3fff1;
+  --vt-c-white-soft: #e3ffdd;
+  --vt-c-white-mute: #d9e7d5;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
@@ -10,8 +15,8 @@
 
   --vt-c-indigo: #2c3e50;
 
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
+  --vt-c-divider-light-1: #34413480;
+  --vt-c-divider-light-2: #31412f79;
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
@@ -23,6 +28,10 @@
 
 /* semantic color variables for this project */
 :root {
+  --color-contrast: var(--vt-c-green-contract);
+  --color-contrast-soft: var(--vt-c-green-contrast-soft);
+  --color-contrast-mute: var(--vt-c-green-contrast-mute);
+
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
