--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,7 +7,7 @@
 
   --vt-c-white: #f3fff1;
   --vt-c-white-soft: #e3ffdd;
-  --vt-c-white-mute: #d9e7d5;
+  --vt-c-white-mute: #e0f1db;
 
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
@@ -17,6 +17,7 @@
 
   --vt-c-divider-light-1: #34413480;
   --vt-c-divider-light-2: #31412f79;
+  --vt-c-divider-light-3: #18251665;
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
@@ -38,6 +39,7 @@
 
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
+  --color-border-mute: var(--vt-c-divider-light-3);
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
