--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,64 +1,18 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  --color-background-soft: #e6e6e6;
+  --color-background: #b9b9b9;
+  --color-background-mute: #808080;
+  
+  --color-border: #000000;
+  --color-border-hover: #181515;
+  --color-contrast: rgb(126, 112, 112);
 
-  --vt-c-green-contract: #a3bba3;
-  --vt-c-green-contrast-soft: #b1beb1b9;
-  --vt-c-green-contrast-mute: #819981b9;
+  --color-text-light: black;
+  --color-text-night: white;
 
-  --vt-c-white: #f3fff1;
-  --vt-c-white-soft: #e3ffdd;
-  --vt-c-white-mute: #e0f1db;
-
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
-
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: #34413480;
-  --vt-c-divider-light-2: #31412f79;
-  --vt-c-divider-light-3: #18251665;
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-}
-
-/* semantic color variables for this project */
-:root {
-  --color-contrast: var(--vt-c-green-contract);
-  --color-contrast-soft: var(--vt-c-green-contrast-soft);
-  --color-contrast-mute: var(--vt-c-green-contrast-mute);
-
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-  --color-border-mute: var(--vt-c-divider-light-3);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
+  --color-development: rgba(238, 238, 13, 0.438);
+  --color-completed: rgba(153, 205, 50, 0.397);
 }
 
 *,
@@ -72,24 +26,11 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: white;
   transition:
     color 0.5s,
     background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
